--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@
 }
 
 @media (max-width:768px) {
-  .header { text-align: center;
-}
+
+  .header { 
+    text-align: center;
+  }
+
 }
 .main {
   display: block;
@@ -34,11 +37,11 @@
 .add-item__row-wrapper {
   display: flex;
 }
-ul {
+.todo, .completed {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.todo-list, .task-header {
   list-style:none;
 }
 input,button{
@@ -57,7 +60,7 @@ button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
+.task-header,
 label[for="add-item__input"] {
   color: #333;
   font-weight: 700;
@@ -91,7 +94,7 @@ label[for="add-item__input"] {
 input#add-item__input {
   width: 318px;
 }
-p > button:hover {
+.add-item > button:hover {
   color: #0fc57c;
 }
 
