--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .add-item__task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .add-item__row-wrapper {
   display: flex;
@@ -121,7 +121,7 @@ li > label {
   width: 226px;
 }
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 li > .todo__button-delete:hover {
   color: #cf2323;
@@ -137,18 +137,18 @@ li > .todo__button-delete:hover {
 
 /* Completed */
 ul#completed label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.todo-list-edit input[type=text] {
   display: inline-block;
-  width:224px
+  width: 224px;
 }
 
 ul li.todo-list-edit label {
