--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header img {
   width: 100%;
 }
+
 .header .header__link {
   font-family: fantasy, cursive;
 }
@@ -24,29 +27,39 @@
   }
 
 }
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .add-item__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .add-item__row-wrapper {
   display: flex;
 }
-.todo, .completed {
+
+.todo,
+.completed {
   margin: 0;
   padding: 0px;
 }
-.todo-list, .task-header {
+
+.todo-list, 
+.task-header {
   list-style: none;
 }
-input,button{
+
+input,
+button{
   outline: none;
 }
+
 button {
   background: none;
   border: 0px;
@@ -56,9 +69,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 button:hover {
   color: #3a3A3a;
 }
+
 /* Heading */
 .task-header,
 label[for="add-item__input"] {
@@ -70,6 +85,7 @@ label[for="add-item__input"] {
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -82,6 +98,7 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 input[type="text"]:focus {
   color: #333;
 }
@@ -91,9 +108,11 @@ label[for="add-item__input"] {
   display: block;
   margin: 0 0 20px;
 }
+
 input#add-item__input {
   width: 318px;
 }
+
 .add-item > button:hover {
   color: #0fc57c;
 }
@@ -107,6 +126,7 @@ li {
   justify-content: space-between;
   align-items: center;
 }
+
 li > * {
   vertical-align: middle;
 }
@@ -114,23 +134,28 @@ li > * {
 li > input[type="checkbox"] {
   margin: 0 10px;
 }
+
 li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 li >    input[type="text"] {
   width: 226px;
 }
+
 li > .todo__button-delete:hover {
   color: #cf2323;
 }
+
 .todo__button-delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .todo__button-delete img:hover {
   transform: rotateZ(0);
 }
